[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "customer-support-openenv"
version = "1.0.0"
description = "An OpenEnv-style RL environment for customer support tasks"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
    "pydantic>=2.0",
    "openenv>=0.1.0",
    "pyyaml>=6.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
]

[project.urls]
Homepage = "https://huggingface.co/spaces/akcodes-47/customer-support-openenv"
Repository = "https://github.com/abhinavkhedwal4-maker/customer-support-openenv"

[tool.openenv]
name = "customer-support-openenv"
version = "1.0.0"
entry_point = "env.environment:CustomerSupportEnv"
tasks = ["easy", "medium", "hard"]